--- a/css/style.css
+++ b/css/style.css
@@ -1234,7 +1234,7 @@ ul {
     opacity: 0.8;
 }
 .phone_number a{
-    color: green !important;
+    color: orange !important;
 }
 .contact_us a{
     color: orange !important;
@@ -1271,18 +1271,25 @@ ul {
 }
 
 .offcanvas-body {
-    padding: 30px 30px 30px 50px;
+    padding: 0px 30px 30px 50px;
 }
 
 .offcanvas-header {
-    padding: 30px 30px 30px 50px;
+    /* padding: 30px 30px 30px 50px; */
 }
 .cross_icon{
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
 }
 .cross{
     cursor: pointer;
+}
+.phone_logo-header{
+    /* border: 2px solid red; */
+}
+.phone_logo-header img{
+    height: 100px;
+    width: 140px;
 }
 
 .desktop-menu-offcanvas .off-canvas-icon {
@@ -1514,7 +1521,7 @@ ul {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 700px;
+    height: 100%;
 }
 
 .banner-three {
@@ -2817,6 +2824,9 @@ ul {
 }
 
 /* 14. Footer css */
+.footer_main_div{
+    padding: 60px !important;
+}
 .footer-one {
     padding: 60px 0px 0px 0px;
     background-color: var(--black-color);
@@ -3292,3 +3302,37 @@ ul {
         transform: rotate(1turn)
     }
 }
+
+
+
+
+/* new added styles  */
+
+.contactForm_div{
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+.contactImg{
+    height: 100vh;
+    width: 50%;
+    padding: 4rem;
+}
+.contactImg img{
+    height: 400px;
+    width: 100%;
+}
+.contactForm{
+    height: 100vh;
+    width: 50%;
+}
+
+@media screen and (max-width: 600px) {
+    .contactImg{
+        display: none;
+    }
+    .contactForm{
+        width: 100%;
+        height: 100%;
+    }
+  }
